<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_one"
        android:shadowColor="@color/main_shadow"
        android:shadowDx="0"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/app_name"
        android:textColor="@color/ocean_main"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45sp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="45sp"
        android:drawableLeft="@drawable/ic_person"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:backgroundTint="@color/ocean_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/inputPhoneNumberL"
        android:layout_width="0sp"
        android:backgroundTint="@color/ocean_main"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:drawableLeft="@drawable/ic_person"
        android:ems="10"
        android:hint="@string/Surname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/inputName"
        app:layout_constraintStart_toStartOf="@+id/inputName"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <EditText
        android:id="@+id/inputPasswordL"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/ocean_main"
        android:drawableLeft="@drawable/ic_phone"
        android:ems="10"
        android:hint="@string/Phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/inputPhoneNumberL"
        app:layout_constraintStart_toStartOf="@+id/inputPhoneNumberL"
        app:layout_constraintTop_toBottomOf="@+id/inputPhoneNumberL" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/ocean_main"
        android:drawableLeft="@drawable/ic_security"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/inputPasswordL"
        app:layout_constraintStart_toStartOf="@+id/inputPasswordL"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordL" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_one"
        android:shadowColor="@color/main_shadow"
        android:shadowDx="0"
        android:shadowDy="5"
        android:shadowRadius="30"
        android:text="@string/Register_footer"
        android:textColor="@color/ocean_main"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        tools:layout_editor_absoluteY="606dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        app:srcCompat="@drawable/lets_start_button" />

</androidx.constraintlayout.widget.ConstraintLayout>